rewrite js for stars

--- a/index.html
+++ b/index.html
@@ -82,6 +82,12 @@
                                 </div>
                                 <div class="game__rating" id="pr">
                                     <svg width="70" height="70">
+                                        <style>
+                                            #progress {
+                                                transform-origin: 50% 50%;
+                                                transform: rotate(-90deg);
+                                            }
+                                        </style>
                                         <circle cx="35" cy="35" r="32" stroke="#b7bacd" stroke-width="2"
                                             fill="transparent" />
                                         <circle id="progress" cx="35" cy="35" r="32" stroke="#13e28d" stroke-width="4"
